[gd_scene load_steps=7 format=2]

[ext_resource path="res://debug.gd" type="Script" id=1]
[ext_resource path="res://gotolevel.gd" type="Script" id=2]
[ext_resource path="res://loadimage.gd" type="Script" id=3]
[ext_resource path="res://showimage.gd" type="Script" id=4]
[ext_resource path="res://showimage-widow.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[node name="debug" type="WindowDialog"]
margin_left = 248.0
margin_top = 152.0
margin_right = 704.0
margin_bottom = 440.0
window_title = "Debug window"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 94.0
margin_bottom = 32.0
text = "go to scene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image" type="Button" parent="."]
margin_left = 104.0
margin_top = 8.0
margin_right = 191.0
margin_bottom = 32.0
text = "open image"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.0
margin_top = -196.0
margin_right = 291.0
margin_bottom = 196.0
window_title = "Select scene"
mode = 0
filters = PoolStringArray( "*.tscn" )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagefile" type="FileDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.0
margin_top = -196.0
margin_right = 291.0
margin_bottom = 196.0
window_title = "Select image"
mode = 0
filters = PoolStringArray( "*.png" )
current_dir = "res://assets"
current_path = "res://assets/"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image2" type="WindowDialog" parent="."]
visible = true
margin_left = 104.0
margin_top = 22.0
margin_right = 376.0
margin_bottom = 270.0
window_title = "image view"
resizable = true
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="image2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="go" to="FileDialog" method="_on_go_pressed"]
[connection signal="pressed" from="image" to="imagefile" method="_on_image_pressed"]
[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="imagefile" to="image2" method="_on_imagefile_file_selected"]
[connection signal="file_selected" from="imagefile" to="image2/TextureRect" method="_on_imagefile_file_selected"]
